# rspotify

./: .env  .gitignore  .test_token  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  Rocket.toml  clippy.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  close_stale.yaml  publish.yaml  webapp_ci.yml
crates/rspotify_auth/: Cargo.toml
crates/rspotify_auth/src/: lib.rs
crates/rspotify_client/: Cargo.toml
crates/rspotify_client/src/: lib.rs
crates/rspotify_client/src/http/: reqwest.rs  ureq.rs
crates/rspotify_http/: Cargo.toml
crates/rspotify_http/src/: lib.rs  ureq.rs
crates/rspotify_macros/: Cargo.toml
crates/rspotify_model/: Cargo.toml
crates/rspotify_model/src/: album.rs  artist.rs  audio.rs  context.rs  device.rs  idtypes.rs  offset.rs  page.rs  playlist.rs  recommend.rs  show.rs  track.rs  user.rs
crates/rspotify_oauth/: Cargo.toml
doc/uml/: crate_hierarchy.plantuml  trait_hierarchy.plantuml
examples/: add_playlists.rs  add_to_queue.rs  add_tracks_to_playlist.rs  album.rs  album_tracks.rs  albums.rs  artist.rs  artist_related_artists.rs  artist_top_tracks.rs  artists.rs  artists_album.rs  artists_albums.rs  audio_analysis.rs  audio_features.rs  audios_features.rs  auth_code.rs  auth_code_pkce.rs  categories.rs  change_user_playlist_detail.rs  check_users_saved_shows.rs  client_credentials.rs  client_creds.rs  code_auth.rs  code_auth_pkce.rs  create_user_playlist.rs  current_playback.rs  current_playing.rs  current_user_followed_artists.rs  current_user_playing_track.rs  current_user_playlists.rs  current_user_recently_played.rs  current_user_saved_albums.rs  current_user_saved_albums_add.rs  current_user_saved_albums_contains.rs  current_user_saved_albums_delete.rs  current_user_saved_tracks.rs  current_user_saved_tracks_add.rs  current_user_saved_tracks_contains.rs  current_user_saved_tracks_delete.rs  current_user_saved_tracks_sync.rs  (+68 more)
examples/blocking/: add_to_queue.rs  artist_top_tracks.rs  categories.rs  check_users_saved_shows.rs  current_playback.rs  current_playing.rs  current_user_followed_artists.rs  current_user_playing_track.rs  current_user_playlists.rs  current_user_recently_played.rs  current_user_saved_albums.rs  current_user_saved_albums_add.rs  current_user_saved_albums_contains.rs  current_user_saved_albums_delete.rs  current_user_saved_tracks.rs  current_user_saved_tracks_add.rs  current_user_saved_tracks_contains.rs  current_user_saved_tracks_delete.rs  current_user_top_artists.rs  current_user_top_tracks.rs  device.rs  featured_playlists.rs  get_a_show.rs  get_access_token_without_cache.rs  get_an_episode.rs  get_saved_show.rs  get_several_episodes.rs  get_several_shows.rs  get_shows_episodes.rs  me.rs  new_releases.rs  next_playback.rs  pause_playback.rs  playlist.rs  previous_playback.rs  recommendations.rs  remove_users_saved_shows.rs  repeat.rs  save_shows.rs  search.rs  (+27 more)
examples/ureq/: current_user_saved_tracks.rs  device.rs  me.rs  search.rs  seek_track.rs  threading.rs
examples/webapp/: Cargo.toml
examples/webapp/src/: main.rs
examples/webapp/templates/: authorize.html.tera  error.html.tera  index.html.tera
model/: Cargo.toml
model/src/: album.rs  artist.rs  audio.rs  category.rs  context.rs  idtypes.rs  lib.rs  offset.rs  page.rs  playlist.rs  recommend.rs  show.rs  track.rs  user.rs
model/src/enums/: country.rs
rspotify-http/: Cargo.toml  README.md
rspotify-http/src/: common.rs  lib.rs  reqwest.rs  ureq.rs
rspotify-http/src/pagination/: iter.rs
rspotify-macros/: Cargo.toml  README.md
rspotify-macros/src/: lib.rs
rspotify-model/: Cargo.toml  README.md
rspotify-model/src/: album.rs  artist.rs  audio.rs  auth.rs  category.rs  context.rs  custom_serde.rs  data_type_patcher.rs  device.rs  error.rs  idtypes.rs  image.rs  lib.rs  offset.rs  page.rs  playing.rs  playlist.rs  recommend.rs  search.rs  show.rs  track.rs  user.rs
rspotify-model/src/enums/: country.rs  misc.rs  mod.rs  types.rs
rspotify-sync/: Cargo.toml
rspotify-sync/examples/: device.rs  me.rs  pagination_sync.rs  search.rs  seek_track.rs
src/: auth_code.rs  auth_code_pkce.rs  client.rs  client_creds.rs  code_auth.rs  code_auth_pkce.rs  errors.rs  lib.rs  macros.rs  main.rs  mod.rs  oauth2.rs  senum.rs  util.rs
src/blocking/: client.rs  mod.rs  oauth2.rs  util.rs
src/clients/: base.rs  mod.rs  oauth.rs
src/clients/mutex/: futures.rs  mod.rs  sync.rs
src/clients/pagination/: iter.rs  mod.rs  stream.rs  wasm_stream.rs
src/endpoints/: base.rs  mod.rs  oauth.rs
src/endpoints/pagination/: iter.rs  stream.rs
src/enums/: country.rs  misc.rs  mod.rs  types.rs
src/http/: common.rs  mod.rs  reqwest.rs  ureq.rs
src/model/: album.rs  artist.rs  audio.rs  category.rs  context.rs  cud_result.rs  device.rs  idtypes.rs  image.rs  mod.rs  offset.rs  page.rs  playing.rs  playlist.rs  recommend.rs  search.rs  show.rs  track.rs  user.rs
src/model/enums/: .misc.rs.swp  country.rs  idtypes.rs  misc.rs  mod.rs  types.rs
src/pagination/: iter.rs  mod.rs  stream.rs
src/search/: mod.rs
src/spotify/: client.rs  mod.rs  model.rs  oauth2.rs  senum.rs  spotify_enum.rs  util.rs
src/spotify/blocking/: client.rs  oauth2.rs  util.rs
src/spotify/model/: album.rs  album_item.rs  artist.rs  audio.rs  category.rs  context.rs  cud_result.rs  device.rs  image.rs  mod.rs  offset.rs  page.rs  playing.rs  playlist.rs  recommend.rs  search.rs  track.rs  user.rs
src/sync/: blocking.rs  futures.rs  mod.rs
src/util/: mod.rs
tests/: test_device.rs  test_enums.rs  test_models.rs  test_oauth2.rs  test_with_credential.rs  test_with_oauth.rs  tests.rs  tests_with_credential.rs  tests_with_oauth.rs  util.rs
tests/common/: mod.rs
tools/: publish.sh
