[package]
authors = [
    "Ramsay Leung <ramsayleung@gmail.com>",
    "Mario Ortiz Manero <marioortizmanero@gmail.com>"
]
name = "rspotify-async"
version = "0.10.0"
license = "MIT"
readme = "README.md"
description = "Asynchronous Spotify API wrapper"
homepage = "https://github.com/ramsayleung/rspotify"
repository = "https://github.com/ramsayleung/rspotify"
keywords = ["spotify", "api"]
edition = "2018"

[workspace]
members = [
    "rspotify-macros",
    "rspotify-model",
    "rspotify-http"
]
exclude = [
    "rspotify-sync",
    "examples/webapp"
]
# For advanced features usage in the CLI, see:
# https://doc.rust-lang.org/nightly/cargo/reference/features.html#resolver-version-2-command-line-flags
resolver = "2"

[dependencies]
rspotify-macros = { path = "rspotify-macros", version = "0.10.0" }
rspotify-model = { path = "rspotify-model", version = "0.10.0" }
rspotify-http = { path = "rspotify-http", version = "0.10.0", default-features = false }

async-stream = { version = "0.3.2", optional = true }
async-trait = { version = "0.1.51", optional = true }
base64 = "0.13.0"
chrono = { version = "0.4.19", features = ["serde", "rustc-serialize"] }
dotenv = { version = "0.15.0", optional = true }
futures = { version = "0.3.17", optional = true }
getrandom = "0.2.3"
log = "0.4.14"
maybe-async = "0.2.6"
serde = { version = "1.0.130", default-features = false }
serde_json = "1.0.67"
thiserror = "1.0.29"
url = "2.2.2"
webbrowser = { version = "0.5.5", optional = true }

[dev-dependencies]
env_logger = { version = "0.9.0", default-features = false }
tokio = { version = "1.11.0", features = ["rt-multi-thread", "macros"] }
futures-util = "0.3.17"

[features]
default = ["client-reqwest", "reqwest-default-tls"]

### Client ###
cli = ["webbrowser"]
env-file = ["dotenv"]

### HTTP ###
# Only asynchronous clients are listed here.
client-reqwest = ["rspotify-http/client-reqwest", "__async"]

# Passing the TLS features to reqwest.
reqwest-default-tls = ["rspotify-http/reqwest-default-tls"]
reqwest-rustls-tls = ["rspotify-http/reqwest-rustls-tls"]
reqwest-native-tls = ["rspotify-http/reqwest-native-tls"]
reqwest-native-tls-vendored = ["rspotify-http/reqwest-native-tls-vendored"]

# Internal features for checking async or sync compilation
__async = ["futures", "async-stream", "async-trait"]

[package.metadata.docs.rs]
# Documenting the CLI methods, and working links for `dotenv`
features = ["cli", "env-file"]

[[example]]
name = "client_creds"
required-features = ["env-file", "cli"]
path = "examples/client_creds.rs"

[[example]]
name = "auth_code"
required-features = ["env-file", "cli"]
path = "examples/auth_code.rs"

[[example]]
name = "auth_code_pkce"
required-features = ["env-file", "cli"]
path = "examples/auth_code_pkce.rs"

[[example]]
name = "oauth_tokens"
required-features = ["env-file", "cli"]
path = "examples/oauth_tokens.rs"

[[example]]
name = "with_refresh_token"
required-features = ["env-file", "cli"]
path = "examples/with_refresh_token.rs"

[[example]]
name = "pagination_manual"
required-features = ["env-file", "cli"]
path = "examples/pagination_manual.rs"

[[example]]
name = "pagination_async"
required-features = ["env-file", "cli"]
path = "examples/pagination_async.rs"
