[package]
name = "rspotify-macros"
authors = [
    "Ramsay Leung <ramsayleung@gmail.com>",
    "Mario Ortiz Manero <marioortizmanero@gmail.com>"
]
version = "0.11.5"
license = "MIT"
description = "Macros for Rspotify"
homepage = "https://github.com/ramsayleung/rspotify"
repository = "https://github.com/ramsayleung/rspotify"
keywords = ["spotify", "api", "rspotify"]
edition = "2018"
readme = "../README.md"

[dev-dependencies]
serde_json = "1.0.67"
