[package]
name = "rspotify-macros"
authors = [
    "Ramsay Leung <ramsayleung@gmail.com>",
    "Mario Ortiz Manero <marioortizmanero@gmail.com>"
]
version = "0.13.0"
license = "MIT"
description = "Macros for RSpotify"
homepage = "https://github.com/ramsayleung/rspotify"
repository = "https://github.com/ramsayleung/rspotify"
keywords = ["spotify", "api", "rspotify"]
categories = ["api-bindings", "multimedia::audio"]
edition = "2018"
readme = "../README.md"

[dev-dependencies]
serde_json = "1.0.67"
