[package]
name = "rspotify-model"
version = "0.13.3"
authors = [
    "Ramsay Leung <ramsayleung@gmail.com>",
    "Mario Ortiz Manero <marioortizmanero@gmail.com>"
]
license = "MIT"
description = "Model for RSpotify"
homepage = "https://github.com/ramsayleung/rspotify"
repository = "https://github.com/ramsayleung/rspotify"
keywords = ["spotify", "api", "rspotify"]
categories = ["api-bindings", "multimedia::audio"]
edition = "2018"
readme = "../README.md"

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
enum_dispatch = "0.3.8"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.67"
strum = { version = "0.26.1", features = ["derive"] }
thiserror = "2.0.3"
