[package]
name = "rspotify_auth"
authors = ["Ramsay Leung <ramsayleung@gmail.com>"]
version = "0.10.0"
license = "MIT"
readme = "README.md"
description = "Spotify API wrapper"
homepage = "https://github.com/ramsayleung/rspotify"
repository = "https://github.com/ramsayleung/rspotify"
keywords = ["spotify", "api", "rspotify"]
edition = "2018"

[dependencies]
rspotify_http = { path = "../rspotify_http", version = "0.10.0" }

chrono = { version = "0.4.13", features = ["serde", "rustc-serialize"] }
log = "0.4.11"
maybe-async = "0.2.1"
thiserror = "1.0.20"
