[package]
name = "rspotify_client"
authors = ["Ramsay Leung <ramsayleung@gmail.com>"]
version = "0.10.0"
license = "MIT"
readme = "README.md"
description = "Spotify API wrapper"
homepage = "https://github.com/ramsayleung/rspotify"
repository = "https://github.com/ramsayleung/rspotify"
keywords = ["spotify", "api", "rspotify"]
edition = "2018"

[dependencies]
rspotify_model = { path = "../rspotify_model", version = "0.10.0" }
rspotify_macros = { path = "../rspotify_macros", version = "0.10.0" }

### Client ###
chrono = { version = "0.4.13", features = ["serde", "rustc-serialize"] }
log = "0.4.11"
maybe-async = "0.2.1"
thiserror = "1.0.20"
webbrowser = { version = "0.5.5", optional = true }
dotenv = { version = "0.15.0", optional = true }
serde = { version = "1.0.115", features = ["derive"] }
serde_json = "1.0.57"
derive_builder = "0.10.0"
getrandom = "0.2.0"

### Auth ###
# chrono = { version = "0.4.13", features = ["serde", "rustc-serialize"] }
# log = "0.4.11"
# maybe-async = "0.2.1"
# thiserror = "1.0.20"

### HTTP ###
# Temporary until https://github.com/rust-lang/rfcs/issues/2739, for
# `maybe_async`.
async-trait = { version = "0.1.40", optional = true }
base64 = "0.13.0"
# log = "0.4.11"
# maybe-async = "0.2.1"
reqwest = { version = "0.11.0", default-features = false, features = ["json", "socks"], optional = true }
# thiserror = "1.0.20"
ureq = { version = "2.0", default-features = false, features = ["json", "cookies"], optional = true }
url = "2.1.1"

[features]
default = ["client-reqwest", "reqwest-default-tls"]

### Client ###
cli = ["webbrowser"]
env-file = ["dotenv"]

### HTTP ###
# Available clients. By default they don't include a TLS so that it can be
# configured.
client-ureq = ["ureq", "__sync"]
client-reqwest = ["reqwest", "__async"]

# Passing the TLS features to reqwest.
reqwest-default-tls = ["reqwest/default-tls"]
reqwest-rustls-tls = ["reqwest/rustls-tls"]
reqwest-native-tls = ["reqwest/native-tls"]
reqwest-native-tls-vendored = ["reqwest/native-tls-vendored"]
# Same for ureq.
ureq-rustls-tls = ["ureq/tls"]

# Internal features for checking async or sync compilation
__async = ["async-trait"]
__sync = ["maybe-async/is_sync"]
