[package]
name = "rspotify_macros"
authors = ["Ramsay Leung <ramsayleung@gmail.com>"]
version = "0.10.0"
license = "MIT"
readme = "README.md"
description = "Spotify API wrapper"
homepage = "https://github.com/ramsayleung/rspotify"
repository = "https://github.com/ramsayleung/rspotify"
keywords = ["spotify", "api", "rspotify"]
edition = "2018"

[dependencies]
serde_json = "1.0.57"
