[package]
name = "webapp"
version = "0.1.0"
authors = [
    "Ramsay Leung <ramsayleung@gmail.com>",
    "Mario Ortiz Manero <marioortizmanero@gmail.com>"
]
edition = "2018"

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
rocket_dyn_templates = { version = "0.1.0-rc.2", features = ["tera"] }
getrandom = "0.2.6"
# Rocket is synchronous, so this uses the `ureq` client
rspotify = { path = "../..", features = ["client-ureq", "ureq-rustls-tls"], default-features = false }
env_logger = { version = "0.9.0", default-features = false }
log = "0.4.0"
cookie = "0.16"
